src/test/ui/async-await/multiple-lifetimes/ret-impl-trait-one.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ret-impl-trait-one.rs:10:85
   |
LL |   async fn async_ret_impl_trait3<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a> + 'b {
   |  ______________________________________________________------_____-------------------_^
   | |                                                      |
   | |                                                      this parameter and the return type are declared with different lifetimes...
LL | |
LL | |     (a, b)
LL | | }
   | |_^ ...but data from `a` is returned here

error[E0700]: hidden type for `impl Trait` captures lifetime that does not appear in bounds
  --> $DIR/ret-impl-trait-one.rs:16:65
   |
LL | async fn async_ret_impl_trait1<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a> {
   |                                                                 ^^^^^^^^^^^^^^
   |
note: hidden type `(&'a u8, &'<empty> u8)` captures lifetime smaller than the function body
  --> $DIR/ret-impl-trait-one.rs:16:65
   |
LL | async fn async_ret_impl_trait1<'a, 'b>(a: &'a u8, b: &'b u8) -> impl Trait<'a> {
   |                                                                 ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0623, E0700.
For more information about an error, try `rustc --explain E0623`.
